Switch to using cmake native pre-commit
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,10 @@ CTestTestfile.cmake
 cmake_install.cmake
 null.d
 *.pc
+cmake-build-*
+
+# Custom pre-commit
+_build-pre-commit
 
 example/a.out
 example/defs_basis.mod
