Fix clang-format issues
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
       args:
         - '-B_build-pre-commit'
         - '-DWITH_Fortran=ON'
+      exclude: src/msg_database.c
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.3.0
