Update gitignore and pre-commit cmake arguments
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,12 +12,14 @@ repos:
       args:
         - '-B_build-pre-commit'
         - '-DWITH_Fortran=ON'
+        - '-DWITH_TESTS=ON'
         - '-i'
       exclude: src/msg_database.c
     - id: clang-tidy
       args:
         - '-B_build-pre-commit'
         - '-DWITH_Fortran=ON'
+        - '-DWITH_TESTS=ON'
       exclude: src/msg_database.c
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
