--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "scikit-build", "cmake", "numpy"]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
+skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*", "cp36-*"]
 manylinux-x86_64-image = "manylinux2014"
 manylinux-aarch64-image = "manylinux2014"
 
