--- a/.github/workflows/spglib-pytest-conda.yml
+++ b/.github/workflows/spglib-pytest-conda.yml
@@ -9,7 +9,7 @@ on:
     branches: [develop]
 
 jobs:
-  build-linux:
+  pytest-linux:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
@@ -44,7 +44,7 @@ jobs:
       with:
         verbose: true
 
-  c-test-linux:
+  ctest-linux:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -53,24 +53,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Add conda to system path
+    - uses: lukka/get-cmake@latest
+      # TODO: switch to cmake preset file
+    - name: Build
       run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install dependencies
-      run: |
-        conda install --yes -c conda-forge python=${{ matrix.python-version }}
-        conda install --yes -c conda-forge gcc_linux-64 make cmake
-    # Require CMake>=3.14 for the following build procedure
-    - name: Test
-      run: |
-        cmake -S . -B build -DUSE_SANITIZER="Address" -DWITH_TESTS=ON
+        cmake -S . -B build -DUSE_SANITIZER="Address" -DWITH_TESTS=ON -DWITH_Fortran=ON
         cmake --build build
-        cd build/test
+    - name: Test
+      working-directory: build/test
+      run: |
         ctest
 
   docs:
