--- a/.github/workflows/spglib-pytest-conda.yml
+++ b/.github/workflows/spglib-pytest-conda.yml
@@ -12,14 +12,16 @@ jobs:
   pytest-linux:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 5
+      matrix:
+        python-version: ["3.9"]
+      fail-fast: true
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: ${{ matrix.python-version }}
     - name: Add conda to system path
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
@@ -35,7 +37,6 @@ jobs:
         python -m build
         pip install .[testing]
     - name: Test with pytest
-      working-directory: ./python
       run: |
         pytest --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
@@ -45,10 +46,6 @@ jobs:
 
   ctest-linux:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9"]
-      fail-fast: true
 
     steps:
     - uses: actions/checkout@v3
