--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,11 +54,14 @@ cmake.args = [
 ]
 
 [tool.cibuildwheel]
-skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*", "cp36-*"]
-manylinux-x86_64-image = "manylinux2014"
-manylinux-aarch64-image = "manylinux2014"
+skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
 test-extras = "testing"
-test-command = "pytest"
+test-command = "pytest {package}/python/test"
+
+[tool.cibuildwheel.linux]
+# TODO: auditwheel fails if LD_LIBRARY_PATH is not set correctly. Not sure about apprropriate value to set to
+#repair-wheel-command = "LD_LIBRARY_PATH=. auditwheel repair --lib-sdir . -w {dest_dir} {wheel}"
+repair-wheel-command = ""
 
 [tool.pytest.ini_options]
 addopts = "--benchmark-skip"
