--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "scikit_build_core.build"
 [project]
 name = "spglib"
 version = "2.0.2"
+requires-python = ">=3.7"
 description = "This is the spglib module."
 license = { text = "BSD-3-Clause" }
 readme = "python/README.rst"
@@ -56,11 +57,16 @@ cmake.args = [
 [tool.cibuildwheel]
 skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
 test-extras = "testing"
-test-command = "pytest {package}/python/test"
+test-command = "pytest {package}/python/test --benchmark-skip"
 
 [tool.cibuildwheel.linux]
 # TODO: auditwheel fails if LD_LIBRARY_PATH is not set correctly. Not sure about apprropriate value to set to
 #repair-wheel-command = "LD_LIBRARY_PATH=. auditwheel repair --lib-sdir . -w {dest_dir} {wheel}"
+repair-wheel-command = ""
+
+[tool.cibuildwheel.macos]
+# TODO: similar to above
+#repair-wheel-command = "DYLD_LIBRARY_PATH=. delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
 repair-wheel-command = ""
 
 [tool.pytest.ini_options]
