--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ cmake.args = [
 ]
 
 [tool.cibuildwheel]
-skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
+skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*", "*-macosx_arm64"]
 test-extras = "testing"
 test-command = "pytest {package}/python/test --benchmark-skip"
 # Do not run test on emulated environments
