Disable pytest on `cibuildwheel` for emulated architectures
Good luck!

Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,8 @@ cmake.args = [
 skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
 test-extras = "testing"
 test-command = "pytest {package}/python/test --benchmark-skip"
+# Do not run test on emulated environments
+test-skip = "*-*linux_{aarch64,ppc64le,s390x} *-macosx_arm64 *-macosx_universal2:arm64"
 
 [tool.cibuildwheel.linux]
 # TODO: auditwheel fails if LD_LIBRARY_PATH is not set correctly. Not sure about apprropriate value to set to
