Fix fortran mod install directory
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/fortran/CMakeLists.txt
+++ b/fortran/CMakeLists.txt
@@ -7,7 +7,7 @@ set_target_properties(spglib_f08 PROPERTIES
 		PUBLIC_HEADER spglib_f08.f90)
 target_include_directories(spglib_f08 PUBLIC
 		"$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
-		"$<INSTALL_INTERFACE:${CMAKE_INSTALL_LIBDIR}>")
+		"$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 target_link_libraries(spglib_f08 PRIVATE symspg)
 # Note: Fortran wrapper is not linked to OpenMP library because it should not be defining any such setup
 
@@ -19,7 +19,7 @@ install(TARGETS spglib_f08
 		PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 # Maybe it is handled automatically
-#install(FILES ${CMAKE_CURRENT_BINARY_DIR}/spglib_f08.mod DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/spglib_f08.mod DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 configure_file(spglib_f08.pc.in spglib_f08.pc @ONLY)
 install(FILES  ${CMAKE_CURRENT_BINARY_DIR}/spglib_f08.pc
