--- a/.github/workflows/spglib-pytest-conda.yml
+++ b/.github/workflows/spglib-pytest-conda.yml
@@ -53,7 +53,7 @@ jobs:
       # TODO: switch to cmake preset file
     - name: Build
       run: |
-        cmake -S . -B build -DUSE_SANITIZER="Address" -DWITH_TESTS=ON -DWITH_Fortran=ON
+        cmake -S . -B build -Dspglib_USE_SANITIZER="Address" -Dspglib_WITH_TESTS=ON -Dsplgib_WITH_Fortran=ON
         cmake --build build
     - name: Test
       working-directory: build/test
