Add fortran interface test
Initial fortran test was written following boilerplate of test_dummmy.F90.

- test_dummy.F90 was changed to test_spg_get_symmetry.f90.
- c_interface_module.F90 was removed. Probably this will not be used.
- test/fortran/utils.f90 contains utilities for fortran tests.
- pre-commit modified file tails of CMakeLists.txt's.

--- a/test/fortran/CMakeLists.txt
+++ b/test/fortran/CMakeLists.txt
@@ -1,6 +1,4 @@
-# Bundle some helpful C->Fortran translation functions
-# Source: FortranWiki https://fortranwiki.org/fortran/show/c_interface_module
-add_library(c_interface_module STATIC c_interface_module.F90)
+add_library(test_utils STATIC utils.f90)
 
 # Generated ctest file that switches and displays tests
 # Note must be plain C because generated CPP file does not include extern "C"
@@ -9,10 +7,10 @@ set(TestsDriver fortran_test.c)
 # Add fortran tests here
 create_test_sourcelist(FortranTests_Files
 		${TestsDriver}
-		test_dummy.F90)
+		test_spg_get_symmetry.f90)
 
 add_executable(FortranTests ${FortranTests_Files})
-target_link_libraries(FortranTests PRIVATE c_interface_module spglib_f08)
+target_link_libraries(FortranTests PRIVATE test_utils spglib_f08)
 
 # Remove the driver executable from the list for add_test
 set(TestsToRun ${FortranTests_Files})
