Add more fortran wrapper tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,9 @@ if (spglib_WITH_Python)
 	add_subdirectory(python)
 endif ()
 if (spglib_WITH_TESTS)
+    if(spglib_WITH_Fortran)
+        set(LIB_MOD_DIR ${CMAKE_CURRENT_BINARY_DIR}/fortran)
+    endif()
 	add_subdirectory(test)
 endif ()
 
