Improve cmake for fortran wrapper test system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ if (spglib_WITH_Python)
 endif ()
 if (spglib_WITH_TESTS)
     if(spglib_WITH_Fortran)
-        set(LIB_MOD_DIR ${CMAKE_CURRENT_BINARY_DIR}/fortran)
+        set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/fortran)
     endif()
 	add_subdirectory(test)
 endif ()
