--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,9 @@ if (spglib_SHARED_LIBS)
 else()
 	set(BUILD_SHARED_LIBS OFF)
 endif()
+if (NOT CMAKE_Fortran_MODULE_DIRECTORY)
+	set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/fortran_mods)
+endif ()
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 
 set(CMAKE_MACOSX_RPATH 1)
@@ -61,9 +64,6 @@ if (spglib_WITH_Python)
 	add_subdirectory(python)
 endif ()
 if (spglib_WITH_TESTS)
-    if(spglib_WITH_Fortran)
-        set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/fortran)
-    endif()
 	add_subdirectory(test)
 endif ()
 
