--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,18 @@ project(spglib
 		VERSION 2.1.0
 		LANGUAGES C)
 
-option(spglib_WITH_Fortran "enable f08 interface" OFF)
-option(spglib_WITH_Python "build python buindings" OFF)
-option(spglib_USE_OMP "Build with OpenMP support" OFF)
-set(spglib_USE_SANITIZER "" CACHE STRING "Sanitizer used in compilation")
+option(SPGLIB_WITH_Fortran "enable f08 interface" OFF)
+option(SPGLIB_WITH_Python "build python buindings" OFF)
+option(SPGLIB_USE_OMP "Build with OpenMP support" OFF)
+set(SPGLIB_USE_SANITIZER "" CACHE STRING "Sanitizer used in compilation")
 
 # Sanity check if project is imported
 if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-	option(spglib_WITH_TESTS "build unit tests" ON)
-	option(spglib_SHARED_LIBS "Build spglib as a shared library" ON)
+	option(SPGLIB_WITH_TESTS "build unit tests" ON)
+	option(SPGLIB_SHARED_LIBS "Build spglib as a shared library" ON)
 else ()
-	option(spglib_WITH_TESTS "build unit tests" OFF)
-	option(spglib_SHARED_LIBS "Build spglib as a shared library" OFF)
+	option(SPGLIB_WITH_TESTS "build unit tests" OFF)
+	option(SPGLIB_SHARED_LIBS "Build spglib as a shared library" OFF)
 endif ()
 
 # Include basic tools
@@ -27,7 +27,7 @@ endif ()
 if (NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Release)
 endif ()
-if (spglib_SHARED_LIBS)
+if (SPGLIB_SHARED_LIBS)
 	set(BUILD_SHARED_LIBS ON)
 else()
 	set(BUILD_SHARED_LIBS OFF)
@@ -43,12 +43,12 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 if (SKBUILD AND WIN32)
 	set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 endif ()
-if (spglib_WITH_Fortran)
+if (SPGLIB_WITH_Fortran)
 	enable_language(Fortran)
 endif ()
 
 # Include third-party libraries
-if (USE_OMP)
+if (SPGLIB_USE_OMP)
 	find_package(OpenMP REQUIRED COMPONENTS C)
 endif ()
 
@@ -57,13 +57,13 @@ add_library(symspg)
 add_library(spglib::symspg ALIAS symspg)
 add_subdirectory(src)
 
-if (spglib_WITH_Fortran)
+if (SPGLIB_WITH_Fortran)
 	add_subdirectory(fortran)
 endif ()
-if (spglib_WITH_Python)
+if (SPGLIB_WITH_Python)
 	add_subdirectory(python)
 endif ()
-if (spglib_WITH_TESTS)
+if (SPGLIB_WITH_TESTS)
 	add_subdirectory(test)
 endif ()
 
