--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -76,14 +76,14 @@ if (NOT SKBUILD)
 	if (WIN32)
 		# TODO: Probably wrong, please fix
 		install(TARGETS symspg
-				EXPORT spglibTargets
+				EXPORT SpglibTargets
 				LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 				ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 				PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 				RUNTIME DESTINATION ${CMAKE_INSTALL_RUNTIMEDIR})
 	else()
 		install(TARGETS symspg
-				EXPORT spglibTargets
+				EXPORT SpglibTargets
 				LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 				ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 				PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
