--- a/cmake/spglibConfig.cmake.in
+++ b/cmake/spglibConfig.cmake.in
@@ -1,5 +1,5 @@
 @PACKAGE_INIT@
 
-include(${CMAKE_CURRENT_LIST_DIR}/spglibTargets.cmake)
+include(${CMAKE_CURRENT_LIST_DIR}/SpglibTargets.cmake)
 
-check_required_components(spglib)
+check_required_components(Spglib)
