Add install components
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -16,15 +16,16 @@ endif ()
 if (WIN32)
 	# Windows needs RUNTIME as well to install the .dll file to
 	install(TARGETS Spglib_symspg
-			LIBRARY DESTINATION ${Python_INSTALL_DIR}
-			PUBLIC_HEADER DESTINATION ${Python_INSTALL_DIR}
-			RUNTIME DESTINATION ${Python_INSTALL_DIR})
+			LIBRARY DESTINATION ${Python_INSTALL_DIR} COMPONENT Spglib_Runtime
+			PUBLIC_HEADER DESTINATION ${Python_INSTALL_DIR} COMPONENT Spglib_Runtime
+			RUNTIME DESTINATION ${Python_INSTALL_DIR} COMPONENT Spglib_Runtime)
 else()
 	# TODO: Cmake forces to install PUBLIC_HEADER when defined
 	# https://gitlab.kitware.com/cmake/cmake/-/issues/24326
 	install(TARGETS Spglib_symspg
-			LIBRARY DESTINATION ${Python_INSTALL_DIR}
-			PUBLIC_HEADER DESTINATION ${Python_INSTALL_DIR})
+			LIBRARY DESTINATION ${Python_INSTALL_DIR} COMPONENT Spglib_Runtime
+			PUBLIC_HEADER DESTINATION ${Python_INSTALL_DIR} COMPONENT Spglib_Runtime)
 endif()
-install(TARGETS Spglib_python LIBRARY DESTINATION ${Python_INSTALL_DIR})
-install(DIRECTORY spglib/ DESTINATION ${Python_INSTALL_DIR})
+install(TARGETS Spglib_python
+		LIBRARY DESTINATION ${Python_INSTALL_DIR} COMPONENT Spglib_Runtime)
+install(DIRECTORY spglib/ DESTINATION ${Python_INSTALL_DIR} COMPONENT Spglib_Runtime)
