--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -75,15 +75,15 @@ if (NOT SKBUILD)
 		# TODO: Probably wrong, please fix
 		install(TARGETS Spglib_symspg
 				EXPORT SpglibTargets
-				LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-				ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-				PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-				RUNTIME DESTINATION ${CMAKE_INSTALL_RUNTIMEDIR})
+				LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Spglib_Runtime NAMELINK_COMPONENT Spglib_Development
+				ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Spglib_Development
+				PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Spglib_Development
+				RUNTIME DESTINATION ${CMAKE_INSTALL_RUNTIMEDIR} COMPONENT Spglib_Runtime)
 	else()
 		install(TARGETS Spglib_symspg
 				EXPORT SpglibTargets
-				LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-				ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-				PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+				LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Spglib_Runtime NAMELINK_COMPONENT Spglib_Development
+				ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Spglib_Development
+				PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Spglib_Development)
 	endif()
 endif()
