--- a/fortran/CMakeLists.txt
+++ b/fortran/CMakeLists.txt
@@ -19,14 +19,16 @@ target_link_libraries(Spglib_fortran PUBLIC Spglib_symspg)
 # Install
 install(TARGETS Spglib_fortran
 		EXPORT SpglibTargets
-		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-		PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Spglib_Runtime NAMELINK_COMPONENT Spglib_Development
+		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Spglib_Development
+		PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Spglib_Development)
 
 # Maybe it is handled automatically
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/spglib_f08.mod DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/spglib_f08.mod
+		DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+		COMPONENT Spglib_Development)
 
 configure_file(spglib_f08.pc.in spglib_f08.pc @ONLY)
-install(FILES  ${CMAKE_CURRENT_BINARY_DIR}/spglib_f08.pc
-	DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
-	COMPONENT pkgconfig)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/spglib_f08.pc
+		DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
+		COMPONENT Spglib_Development)
